@@ -88,7 +88,7 @@ public class Zone extends PGraphicsDelegate implements PConstants, KeyListener {
 
 	// private boolean pickInitialized = false;
 
-	private Zone parent = null;
+	protected Zone parent = null;
 
 	private float rntRadius;
 
@@ -692,8 +692,8 @@ public class Zone extends PGraphicsDelegate implements PConstants, KeyListener {
 	public boolean add(Zone zone) {
 		if (zone != null) {
 			// if the parent already is in the client zoneList, then add the
-			// child
-			if (TouchClient.zoneList.contains(this)) {
+			// child if it is not in the client zoneList
+			if (TouchClient.zoneList.contains(this) && !TouchClient.zoneList.contains(zone)) {
 				client.add(zone);
 			}
 			zone.parent = this;
@@ -1619,8 +1619,10 @@ public class Zone extends PGraphicsDelegate implements PConstants, KeyListener {
 			applet.g = pg;
 
 			beginTouch();
+			pushStyle();
 			touchImpl();
 			SMTUtilities.invoke(touchMethod, applet, this);
+			popStyle();
 			endTouch();
 
 			if (touchMethod == null && !(this instanceof ButtonZone) && !(this instanceof KeyZone)
